--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/halaman_login.jpg" alt="">
+                        <img src="img/WhatsApp.jpeg" alt="">
                         <div class="blog-text">
                             <a href="https://portfolio-endangzulfikar.github.io" target="_blank"><h4>
                                 Sistem Informasi Akademik Sekolah Berbasis Website Pada SMK Industri Jababeka Cikarang
