--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Endang Zulfikar</title>
+    <link rel="icon" href="img/E-Z.png">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -199,7 +200,7 @@
                         </div>
                     </div>
                     <div class="blog">
-                        <img src="img/WhatsApp.jpeg" alt="">
+                        <img src="img/halaman_login.jpg" alt="">
                         <div class="blog-text">
                             <a href="https://portfolio-endangzulfikar.github.io" target="_blank"><h4>
                                 Sistem Informasi Akademik Sekolah Berbasis Website Pada SMK Industri Jababeka Cikarang
