--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 </div>
                 <div class="blogs">
                     <div class="blog">
-                        <img src="img/halaman_login.jpg" alt="">
+                        <img src="img/project.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 Aplikasi Dekstop Perpustakaan Sekolah Pada SMP Negeri 64 Jakarta Berbasis Java
