--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     "If You Want To Live Happily, Be Attached To Goals, Not People Or Things".
                 </p>
                 <div class="btn-con">
-                    <a href="download/CV_Update_2022_Endang_Zulfikar.pdf" target="_blank" class="main-btn">
+                    <a href="download/CV__Update__2023__Endang__Zulfikar.pdf" target="_blank" class="main-btn">
                         <span class="btn-text">Download CV Saya</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -55,7 +55,7 @@
                         profesional dan dapat memberikan kontribusi dengan baik kepada Perusahaan.
                     </p>
                     <div class="btn-con" style="position: absolute; top: 23%; left: 40%;">
-                        <a href="download/CV_Update_2022_Endang_Zulfikar.pdf" target="_blank" class="main-btn">
+                        <a href="download/CV__Update__2023__Endang__Zulfikar.pdf" target="_blank" class="main-btn">
                             <span class="btn-text">Download CV Saya</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -139,7 +139,7 @@
                     <p class="tl-duration">2021 - 2022</p>
                     <h5>Universitas Nusa Mandiri<span><br>Jakarta</span></h5>
                     <p>
-                        STRATA-1 SISTEM INFORMASI.
+                        STRATA-I SISTEM INFORMASI.
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -162,7 +162,7 @@
                     <p class="tl-duration">MEI 2020 - AGUSTUS 2021</p>
                     <h5>PT. Bank Danamon Indonesia, Tbk<span><br>Staff General Administration Loan Operation</span></h5>
                     <p>
-                        Mengelola Aset Divisi Dalam Sistem FAS,
+                        Mengelola Aset Divisi Dalam Sistem FAS (Fixed Asset System),
                         Melakukan Filling Dokumen ke Vendor dan
                         Melakukan Entry Data.
                     </p>
