--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                                 <a href="img/WhatsApp.jpeg" target="_blank">
                                     <i class="fab fa-whatsapp"></i>
                                 </a>
-                                <a href="img/Telegram.png" target="_blank">
+                                <a href="img/Telegram.jpg" target="_blank">
                                     <i class="fab fa-telegram"></i>
                                 </a>
                             </div>
