--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 <div class="left-about">
                     <h3 style="text-align: center; padding:2%">PROFIL</h3>
                     <p>
-                        Saya adalah orang yang memiliki rasa bertanggung jawab, memiliki motivasi diri dan
-                        mudah beradaptasi dengan semua situasi yang menantang. Mampu mengerjakan
-                        pekerjaan yang dilakukan secara individu maupun tim dengan didukung sebuah rasa
-                        inisiatif. Dengan pengalaman bekerja yang Saya miliki, Saya yakin dapat bekerja secara
+                        Saya lulusan Sistem Informasi dari Universitas Nusa Mandiri, saya merupakan pribadi yang
+                        memiliki rasa bertanggung jawab, memiliki motivasi diri dan mudah beradaptasi. Mampu
+                        mengerjakan pekerjaan yang dilakukan secara individu maupun tim dengan didukung sebuah
+                        rasa inisiatif. Dengan pengalaman bekerja yang Saya miliki, Saya yakin dapat bekerja secara
                         profesional dan dapat memberikan kontribusi dengan baik kepada Perusahaan.
                     </p>
                     <div class="btn-con" style="position: absolute; top: 23%; left: 40%;">
