--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
                 <div class="left-about">
                     <h3 style="text-align: center; padding:2%">PROFIL</h3>
                     <p>
-                        Saya lulusan Sistem Informasi dari Universitas Nusa Mandiri, 
+                        Saya lulusan Sistem Informasi dari Universitas Nusa Mandiri, saya merupakan pribadi yang
+                        memiliki rasa bertanggung jawab, memiliki motivasi diri dan mudah beradaptasi. Mampu
+                        mengerjakan pekerjaan yang dilakukan secara individu maupun tim dengan didukung sebuah
+                        rasa inisiatif. Dengan pengalaman bekerja yang Saya miliki, Saya yakin dapat bekerja secara
+                        profesional dan dapat memberikan kontribusi dengan baik kepada Perusahaan. 
                     </p>
                     <div class="btn-con" style="position: absolute; top: 23%; left: 40%;">
                         <a href="download/CV__Update2023__EndangZulfikar.pdf" target="_blank" class="main-btn">
