--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <div class="progress-con">
                             <p class="prog-text">80%</p>
                             <div class="progress">
-                                <span class="html"></span>
+                                <span class="word"></span>
                             </div>
                         </div>
                     </div>
@@ -79,7 +79,7 @@
                         <div class="progress-con">
                             <p class="prog-text">80%</p>
                             <div class="progress">
-                                <span class="css"></span>
+                                <span class="excel"></span>
                             </div>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
                         <div class="progress-con">
                             <p class="prog-text">60%</p>
                             <div class="progress">
-                                <span class="js"></span>
+                                <span class="photoshop"></span>
                             </div>
                         </div>
                     </div>
@@ -97,7 +97,7 @@
                         <div class="progress-con">
                             <p class="prog-text">60%</p>
                             <div class="progress">
-                                <span class="react"></span>
+                                <span class="coreldraw"></span>
                             </div>
                         </div>
                     </div>
@@ -106,7 +106,7 @@
                         <div class="progress-con">
                             <p class="prog-text">70%</p>
                             <div class="progress">
-                                <span class="node"></span>
+                                <span class="html"></span>
                             </div>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
                         <div class="progress-con">
                             <p class="prog-text">65%</p>
                             <div class="progress">
-                                <span class="python"></span>
+                                <span class="css"></span>
                             </div>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
                         <div class="progress-con">
                             <p class="prog-text">65%</p>
                             <div class="progress">
-                                <span class="python"></span>
+                                <span class="javascript"></span>
                             </div>
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                         <div class="progress-con">
                             <p class="prog-text">65%</p>
                             <div class="progress">
-                                <span class="python"></span>
+                                <span class="mysql"></span>
                             </div>
                         </div>
                     </div>
