--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <p class="tl-duration">MEI 2020 - AGUSTUS 2021</p>
                     <h5>PT. Bank Danamon Indonesia, Tbk<span><br>Staff General Administration Loan Operation</span></h5>
                     <p>
-                        Mengelola Aset Divisi Dalam Sistem FAS (Fixed Asset System),
+                        - Mengelola Aset Divisi Dalam Sistem FAS (Fixed Asset System),
                         Melakukan Filling Dokumen ke Vendor dan
                         Melakukan Entry Data.
                     </p>
@@ -180,7 +180,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">AGUSTUS 2013 - JUNI 2014</p>
+                    <p class="tl-duration">AGUSTUS 2013 - JULI 2014</p>
                     <h5>PT. Mitra Komunikasi Nusantara<span><br>STAFF ADMINISTRASI</span></h5>
                     <p>
                         Melakukan Filling Dokumen dari Hasil
