--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
                     <p class="tl-duration">MEI 2020 - AGUSTUS 2021</p>
                     <h5>PT. Bank Danamon Indonesia, Tbk<span><br>Staff General Administration Loan Operation</span></h5>
                     <p>
-                        - Mengelola Aset Divisi Dalam Sistem FAS (Fixed Asset System),
-                        Melakukan Filling Dokumen ke Vendor dan
+                        - Mengelola Aset Divisi Dalam Sistem FAS (Fixed Asset System).<br>Melakukan Filling Dokumen ke Vendor dan
                         Melakukan Entry Data.
                     </p>
                 </div>
