--- a/index.html
+++ b/index.html
@@ -171,8 +171,13 @@
                     <p class="tl-duration">MEI 2020 - AGUSTUS 2021</p>
                     <h5>PT. Bank Danamon Indonesia, Tbk<span><br>Staff General Administration Loan Operation</span></h5>
                     <p>
-                        - Mengelola Aset Divisi Dalam Sistem FAS (Fixed Asset System).<br>Melakukan Filling Dokumen ke Vendor dan
-                        Melakukan Entry Data.
+                        - Mengelola Aset Divisi Dalam Sistem FAS (Fixed Asset System).<br>
+                        - Mendukung Operasional Divisi.<br>
+                        - Melakukan Request Dokumen dan Filling Dokumen ke Vendor.<br>
+                        - Melakukan Request ATK ke Tim Procurement.<br>
+                        - Melakukan Perubahan Tenor Pinjaman Nasabah ke Tim Parameter.<br>
+                        - Melakukan Perubahan Unit Kerja User ke Tim User Admin.<br>
+                        - Melakukan Follow Up ke Tim IT Support Untuk Operasional Divisi.<br>
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -182,9 +187,10 @@
                     <p class="tl-duration">AGUSTUS 2013 - JULI 2014</p>
                     <h5>PT. Mitra Komunikasi Nusantara<span><br>STAFF ADMINISTRASI</span></h5>
                     <p>
-                        Melakukan Filling Dokumen dari Hasil
-                        Produksi Gadget dan Melakukan Entry Data
-                        dari Masing-masing Tipe Gadget.
+                        - Melakukan Filling Dokumen.<br>
+                        - Membuat Laporan dari Hasil Unit Smartphone yang di Produksi.<br>
+                        - Melakukan Input Data Produk Smartphone ke Sistem.<br>
+                        - Membuat Surat Jalan Untuk Operasional Driver.<br>
                     </p>
                 </div>
             </div>
