--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
                     <p class="tl-duration">MEI 2020 - AGUSTUS 2021</p>
                     <h5>PT. Bank Danamon Indonesia, Tbk<span><br>Staff General Administration Loan Operation</span></h5>
                     <p>
-                        <li>Mengelola Aset Divisi Dalam Sistem FAS (Fixed Asset System).</li><br>
-                        <li>Mendukung Operasional Divisi.</li><br>
-                        <li>Melakukan Request Dokumen dan Filling Dokumen ke Vendor.</li><br>
-                        <li>Melakukan Request ATK ke Tim Procurement.</li><br>
-                        <li>Melakukan Perubahan Tenor Pinjaman Nasabah ke Tim Parameter.</li><br>
-                        <li>Melakukan Perubahan Unit Kerja User ke Tim User Admin.</li><br>
-                        <li>Melakukan Follow Up ke Tim IT Support Untuk Operasional Divisi.</li><br>
+                        - Mengelola Aset Divisi Dalam Sistem FAS (Fixed Asset System).<br>
+                        - Mendukung Operasional Divisi.<br>
+                        - Melakukan Request Dokumen dan Filling Dokumen ke Vendor.<br>
+                        - Melakukan Request ATK ke Tim Procurement.<br>
+                        - Melakukan Perubahan Tenor Pinjaman Nasabah ke Tim Parameter.<br>
+                        - Melakukan Perubahan Unit Kerja User ke Tim User Admin.<br>
+                        - Melakukan Follow Up ke Tim IT Support Untuk Operasional Divisi.<br>
                     </p>
                 </div>
                 <div class="timeline-item">
