--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <h5>PT. Bank Danamon Indonesia, Tbk<span><br>Staff General Administration Loan Operation</span></h5>
                     <p>
                     <ul>
-                        <li>Mengelola Aset Divisi Dalam Sistem FAS (Fixed Asset System).</li><br>
+                        <li>Mengelola Aset Divisi Dalam Sistem FAS (Fixed Asset System).</li>
                         - Mendukung Operasional Divisi.<br>
                         - Melakukan Request Dokumen dan Filling Dokumen ke Vendor.<br>
                         - Melakukan Request ATK ke Tim Procurement.<br>
