--- a/index.html
+++ b/index.html
@@ -171,15 +171,13 @@
                     <p class="tl-duration">MEI 2020 - AGUSTUS 2021</p>
                     <h5>PT. Bank Danamon Indonesia, Tbk<span><br>Staff General Administration Loan Operation</span></h5>
                     <p>
-                    <ul>
-                        <li>Mengelola Aset Divisi Dalam Sistem FAS (Fixed Asset System).</li>
-                        - Mendukung Operasional Divisi.<br>
-                        - Melakukan Request Dokumen dan Filling Dokumen ke Vendor.<br>
-                        - Melakukan Request ATK ke Tim Procurement.<br>
-                        - Melakukan Perubahan Tenor Pinjaman Nasabah ke Tim Parameter.<br>
-                        - Melakukan Perubahan Unit Kerja User ke Tim User Admin.<br>
-                        - Melakukan Follow Up ke Tim IT Support Untuk Operasional Divisi.<br>
-                    </ul>
+                        - Mengelola Aset Divisi Dalam Sistem FAS (Fixed Asset System).<br><br>
+                        - Mendukung Operasional Divisi.<br><br>
+                        - Melakukan Request Dokumen dan Filling Dokumen ke Vendor.<br><br>
+                        - Melakukan Request ATK ke Tim Procurement.<br><br>
+                        - Melakukan Perubahan Tenor Pinjaman Nasabah ke Tim Parameter.<br><br>
+                        - Melakukan Perubahan Unit Kerja User ke Tim User Admin.<br><br>
+                        - Melakukan Follow Up ke Tim IT Support Untuk Operasional Divisi.<br><br>
                     </p>
                 </div>
                 <div class="timeline-item">
