--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
                     <p class="tl-duration">AGUSTUS 2013 - JULI 2014</p>
                     <h5>PT. Mitra Komunikasi Nusantara<span><br>STAFF ADMINISTRASI</span></h5>
                     <p>
-                        <li>Melakukan Filling Dokumen.</li><br>
-                        <li>Membuat Laporan dari Hasil Unit Smartphone yang di Produksi.</li><br>
-                        <li>Melakukan Input Data Produk Smartphone ke Sistem.</li><br>
-                        <li>Membuat Surat Jalan Untuk Operasional Driver.</li><br>
+                        - Melakukan Filling Dokumen.<br><br>
+                        - Membuat Laporan dari Hasil Unit Smartphone yang di Produksi.<br><br>
+                        - Melakukan Input Data Produk Smartphone ke Sistem.<br><br>
+                        - Membuat Surat Jalan Untuk Operasional Driver.<br><br>
                     </p>
                 </div>
             </div>
