--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
                     <h5>Universitas Nusa Mandiri<span><br>Jakarta</span></h5>
                     <p>
                         STRATA-I SISTEM INFORMASI.
+                        IPK: 3.24
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -159,6 +160,7 @@
                     <h5>Universitas Bina Sarana Informatika<span><br>Jakarta</span></h5>
                     <p>
                         DIPLOMA-III SISTEM INFORMASI.
+                        IPK: 3.07
                     </p>
                 </div>
             </div>
