--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <p class="tl-duration">2021 - 2022</p>
                     <h5>Universitas Nusa Mandiri<span><br>Jakarta</span></h5>
                     <p>
-                        STRATA-I SISTEM INFORMASI.
+                        STRATA-I SISTEM INFORMASI.<br>
                         IPK: 3.24
                     </p>
                 </div>
@@ -159,7 +159,7 @@
                     <p class="tl-duration">2016 - 2019</p>
                     <h5>Universitas Bina Sarana Informatika<span><br>Jakarta</span></h5>
                     <p>
-                        DIPLOMA-III SISTEM INFORMASI.
+                        DIPLOMA-III SISTEM INFORMASI.<br>
                         IPK: 3.07
                     </p>
                 </div>
