--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <h5>PT. Bank Danamon Indonesia, Tbk<span><br>Staff General Administration Loan Operation</span></h5>
                     <p>
                         - Mengelola Aset Divisi Dalam Sistem FAS (Fixed Asset System).<br><br>
-                        - Mendukung Operasional Divisi.<br><br>
+                        - Menjalankan Fungsi Administrasi dan Data Entry.<br><br>
                         - Melakukan Request Dokumen dan Filling Dokumen ke Vendor.<br><br>
                         - Melakukan Request ATK ke Tim Procurement.<br><br>
                         - Melakukan Perubahan Tenor Pinjaman Nasabah ke Tim Parameter.<br><br>
@@ -191,7 +191,7 @@
                     <p>
                         - Melakukan Filling Dokumen.<br><br>
                         - Membuat Laporan dari Hasil Unit Smartphone yang di Produksi.<br><br>
-                        - Melakukan Input Data Produk Smartphone ke Sistem.<br><br>
+                        - Melakukan Data Entry Produk Smartphone ke Sistem.<br><br>
                         - Membuat Surat Jalan Untuk Operasional Driver.<br><br>
                     </p>
                 </div>
