--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                                     <span>Alamat :</span>
                                 </div>
                                 <p>
-                                    Jl. Tanah Tinggi Sawah No. 95D, Rt/Rw-004/012, Johar Baru, Jakarta 10540
+                                    Jl. Tanah Tinggi Sawah No. 95D, Johar Baru, Jakarta Pusat 10540
                                 </p>
                             </div>
                             <br>
