--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="about-stats">
                 <h4 class="stat-title">Keahlian Profesional</h4>
                 <div class="progress-bars">
-                    <div class="progress-bar">
+                    <!--<div class="progress-bar">
                         <p class="prog-title">Microsoft Word</p>
                         <div class="progress-con">
                             <p class="prog-text">80%</p>
@@ -73,69 +73,69 @@
                                 <span class="word"></span>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="progress-bar">
                         <p class="prog-title">Microsoft Excel</p>
-                        <div class="progress-con">
+                        <!--<div class="progress-con">
                             <p class="prog-text">80%</p>
                             <div class="progress">
                                 <span class="excel"></span>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="progress-bar">
                         <p class="prog-title">Adobe Photoshop</p>
-                        <div class="progress-con">
+                        <!--<div class="progress-con">
                             <p class="prog-text">60%</p>
                             <div class="progress">
                                 <span class="photoshop"></span>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                     <div class="progress-bar">
                         <p class="prog-title">Corel Draw</p>
-                        <div class="progress-con">
+                        <!--<div class="progress-con">
                             <p class="prog-text">60%</p>
                             <div class="progress">
                                 <span class="coreldraw"></span>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                     <div class="progress-bar">
                         <p class="prog-title">HTML</p>
-                        <div class="progress-con">
+                        <!--<div class="progress-con">
                             <p class="prog-text">75%</p>
                             <div class="progress">
                                 <span class="html"></span>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                     <div class="progress-bar">
                         <p class="prog-title">CSS</p>
-                        <div class="progress-con">
+                        <!--<div class="progress-con">
                             <p class="prog-text">70%</p>
                             <div class="progress">
                                 <span class="css"></span>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                     <div class="progress-bar">
                         <p class="prog-title">JavaScript</p>
-                        <div class="progress-con">
+                        <!--<div class="progress-con">
                             <p class="prog-text">65%</p>
                             <div class="progress">
                                 <span class="javascript"></span>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                     <div class="progress-bar">
                         <p class="prog-title">MySQL</p>
-                        <div class="progress-con">
+                        <!--<div class="progress-con">
                             <p class="prog-text">65%</p>
                             <div class="progress">
                                 <span class="mysql"></span>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </div>
