--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             <div class="about-stats">
                 <h4 class="stat-title">Keahlian Profesional</h4>
                 <div class="progress-bars">
-                    <!--<div class="progress-bar">
+                    <div class="progress-bar">
                         <p class="prog-title">Microsoft Word</p>
-                        <div class="progress-con">
+                        <!--<div class="progress-con">
                             <p class="prog-text">80%</p>
                             <div class="progress">
                                 <span class="word"></span>
@@ -81,8 +81,8 @@
                             <div class="progress">
                                 <span class="excel"></span>
                             </div>
-                        </div>
-                    </div>-->
+                        </div>-->
+                    </div>
                     <div class="progress-bar">
                         <p class="prog-title">Adobe Photoshop</p>
                         <!--<div class="progress-con">
