--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                                 <a href="https://www.facebook.com/endangskins/" target="_blank">
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
-                                <a href="https://www.instagram.com/endangskins/" target="_blank">
+                                <a href="https://www.instagram.com/endangstark/" target="_blank">
                                     <i class="fab fa-instagram"></i>
                                 </a>
                                 <a href="https://www.linkedin.com/in/endang-zulfikar-92b2ba1a5/" target="_blank">
