--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                         </div>
                         <div class="contact-icons">
                             <div class="contact-icon">
-                                <a href="https://www.facebook.com/endangskins/" target="_blank">
+                                <a href="https://www.facebook.com/endangstark/" target="_blank">
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
                                 <a href="https://www.instagram.com/endangstark/" target="_blank">
