--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     "If You Want To Live Happily, Be Attached To Goals, Not People Or Things".
                 </p>
                 <div class="btn-con">
-                    <a href="download/CV_Terbaru2024_EndangZulfikar.pdf" target="_blank" class="main-btn">
+                    <a href="download/CV_Terbaru2025_EndangZulfikar.pdf" target="_blank" class="main-btn">
                         <span class="btn-text">Download CV Saya</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -55,7 +55,7 @@
                         profesional dan dapat memberikan kontribusi dengan baik kepada Perusahaan.
                     </p>
                     <div class="btn-con" style="position: absolute; top: 23%; left: 40%;">
-                        <a href="download/CV_Terbaru2024_EndangZulfikar.pdf" target="_blank" class="main-btn">
+                        <a href="download/CV_Terbaru2025_EndangZulfikar.pdf" target="_blank" class="main-btn">
                             <span class="btn-text">Download CV Saya</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -171,15 +171,17 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">MEI 2020 - AGUSTUS 2021</p>
-                    <h5>PT. Bank Danamon Indonesia, Tbk<span><br>Staff General Administration Loan Operation</span></h5>
+                    <h5>PT. Bank Danamon Indonesia, Tbk<span><br>Loan Operation Development Support</span></h5>
                     <p>
-                        - Mengelola Aset Divisi Dalam Sistem FAS (Fixed Asset System).<br><br>
-                        - Menjalankan Fungsi Administrasi dan Data Entry.<br><br>
-                        - Melakukan Request Dokumen dan Filling Dokumen ke Vendor.<br><br>
-                        - Melakukan Request ATK ke Tim Procurement.<br><br>
-                        - Melakukan Perubahan Tenor Pinjaman Nasabah ke Tim Parameter.<br><br>
-                        - Melakukan Perubahan Unit Kerja User ke Tim User Admin.<br><br>
-                        - Melakukan Follow Up ke Tim IT Support Untuk Operasional Divisi.<br><br>
+                        - Melakukan Pengiriman dan Penyimpanan Dokumen yang Berkaitan Dengan Pengarsipan Dokumen Serta Berkoordinasi Dengan Vendor.<br><br>
+                        - Melakukan Testing Aplikasi (User Acceptanse Testing) Terkait Pencairan Pinjaman, Perubahan Bunga, Perubahan Periode, Pembayaran Serta Pelunasan.<br><br>
+                        - Melakukan Pengadaan Operasional dan Pembelian Barang/Jasa Melalui Sistem Procure-to-Pay (P2P) Serta Membuat Laporan Rutin.<br><br>
+                        - Monitoring Pengelolaan Aset Pada Fixed Asset System (FAS) & Document Seperti Stock Opname, Mutasi Aset dan Pelelangan Aset.<br><br>
+                        - Membuat Request Form User Id, Perubahan Limit, Perubahan Parameter Sistem dan Perubahan Kurs USD.<br><br>
+                        - Mengelola Project Pelatihan E-Learning Loan Operation Untuk Pengembangan Divisi.<br><br>
+                        - Rekapitulasi dan Penginputan Data Transaksi Harian Nasabah.<br><br>
+                        - Membuat Surat Konfirmasi Bank Untuk Diserahkan Kepada Pelaku Usaha Atau Nasabah.<br><br>
+                        - Berkoordinasi Dengan IT Support terkait Permasalahan dan Peremajaan Komputer User.<br><br>
                     </p>
                 </div>
                 <div class="timeline-item">
